# docker-ia

./: .env.example  .gitignore  README.md  docker-compose.yml
data/jupyter-notebook/: pyproject.toml
docker/: autogen-studio.dockerfile  jupyter.dockerfile  ollama-entrypoint.sh  ollama.dockerfile
